syntax = "proto3";

package quutio.bouncer;

import "games.proto";
import "servers.proto";
import "google/protobuf/duration.proto";

option csharp_namespace = "Bouncer.Grpc";
option java_package = "io.quut.bouncer.grpc";
option java_multiple_files = true;

message ClientSessionMessage {
	optional int32 messageId = 1;

	oneof message {
		CloseRequest closeRequest = 2;
		PingRequest pingRequest = 3;

		ServerRegistrationRequest registerServerRequest = 4;
		ServerUnregistrationRequest unregisterServerRequest = 5;
		ServerUpdateRequest updateServerRequest = 6;

		GameRegistrationRequest registerGameRequest = 7;
		GameUnregistrationRequest unregisterGameRequest = 8;

		ReserveResponse reserveResponse = 9;
	}

	message CloseRequest {
		optional bool intentional = 1;
	}

	message PingRequest {
	}

	message ServerRegistrationRequest {
		int32 trackingId = 1;
		ServerData data = 2;
		optional ServerStatus status = 3;
		repeated GameRegistration games = 4;
	}

	message ServerUnregistrationRequest {
		int32 trackingId = 1;
	}

	message ServerUpdateRequest {
		int32 trackingId = 1;
		ServerStatusUpdate status = 2;
	}

	message GameRegistrationRequest {
		int32 serverTrackingId = 1;
		GameRegistration registration = 2;
	}

	message GameRegistration {
		int32 trackingId = 1;
		GameData data = 2;
	}

	message GameUnregistrationRequest {
		int32 trackingId = 1;
	}

	message ReserveResponse {
		oneof result {
			Success success = 1;
		}

		message Success {
		}
	}
}

message ServerSessionMessage {
	optional int32 messageId = 1;

	oneof message {
		SettingsResponse settingsResponse = 2;

		ServerRegistrationResponse registerServerResponse = 3;
		GameRegistrationResponse registerGameResponse = 4;

		ReserveRequest reserveRequest = 5;
	}

	message SettingsResponse {
		google.protobuf.Duration pingInterval = 1;
	}

	message ServerRegistrationResponse {
		int32 serverId = 1;
		repeated GameRegistrationResponse games = 2;
	}

	message GameRegistrationResponse {
		int32 gameId = 1;
	}

	message ReserveRequest {
		oneof scope {
			int32 serverId = 1;
			int32 gameId = 2;
		}
		repeated bytes players = 3;
	}
}
